--- a/woa-core2.0-angular-website/woa-core2.0-angular-website.csproj
+++ b/woa-core2.0-angular-website/woa-core2.0-angular-website.csproj
@@ -20,6 +20,9 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\dist\" />
+  </ItemGroup>
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
