--- a/woa-core2.0-angular-website/woa-core2.0-angular-website.csproj
+++ b/woa-core2.0-angular-website/woa-core2.0-angular-website.csproj
@@ -22,6 +22,9 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\dist\" />
+    <Folder Include="ClientApp\app\components\pazienti\" />
+    <Folder Include="ClientApp\app\shared\" />
+    <Folder Include="Apis\" />
   </ItemGroup>
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
